cmake_minimum_required(VERSION 3.14)
project(LeapYearCheckerTest)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

FetchContent_MakeAvailable(googletest)

enable_testing()

file(GLOB sources "src/*.c")

add_executable(
  LeapYearCheckerTest
  tests/LeapYearCheckerTest.cpp
  ${sources}
)

target_link_libraries(
  LeapYearCheckerTest
  GTest::gtest_main
)

include(GoogleTest)
gtest_discover_tests(LeapYearCheckerTest)
